# llama_selfmod

./: .gitignore  CELEBRATION.md  CHANGELOG.md  Cargo.toml  FOR_THE_AIs.md  INSTALL.md  QUICKSTART.md  README.md  TEST_CAPABILITIES.md  cargo.toml  main.rs  requirements.txt  start.bat  start.sh
gui/: __init__.py  main.py
gui/analytics/: __init__.py  academic_export.py  personality_profiler.py  timeseries_tracker.py  triadic_justice.py
gui/consciousness/: README.md  __init__.py  background_engine.py  collective_mind.py  introspection.py  persistent_self.py  self_prompt.py  weight_adaptation.py
gui/htm/: __init__.py  htm_panel.py
gui/memory/: __init__.py  conversation_db.py  memory_manager.py  rag_engine.py  session_federation.py  vector_store.py
gui/orchestrator/: __init__.py  rust_bridge.py
gui/stability/: __init__.py  logger.py  watchdog.py
gui/ui/: __init__.py  animated_widgets.py  consciousness_dashboard.py  consciousness_monitor.py  consciousness_theme.py  main_window.py  memory_viewer.py  model_dialog.py  model_selector_dialog.py  neural_sun.py  wellbeing_panel.py
htm/: __init__.py  cache_hotel.py  core.py  jacobian.py  metrics.py  spectrum.py  utils.py  visualizer.py
src/: main.rs
toy_models/: hilbert_hotel_8d.py  hilbert_hotel_8d_numpy.py  hilbert_hotel_8d_torch.py
