[package]
name = "llama_selfmod"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = "0.1.67"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
num_cpus = "1.16"

[profile.release]
opt-level = 3